--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">Voguely</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="HeyText">Hey!</string>
+    <string name="SubtitleText">Welcome Back</string>
+    <string name="LoginTab">Login</string>
+    <string name="SignUpTab">Sign Up</string>
+    <string name="emailField">Email</string>
+    <string name="passwordField">Password</string>
+    <string name="loginButton">Login</string>
+    <string name="termsConditionText">Terms and Conditions Apply*</string>
 </resources>
