started to split the more icon from the text viw in the single item layout, it should be a image view, still work in progress

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,8 @@
     <string name="login_tab">Login</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="item_name">name: some text in almost black</string>
+    <string name="item_name">name item in almost black</string>
     <string name="item_price">some orange price in €</string>
-    <string name="like_counter">likes number and star icon</string>
-    <string name="reviews_counter">reviews number and three dots icon icon</string>
+    <string name="like_counter">rate number and star icon</string>
+    <string name="reviews_counter">reviews number </string>
 </resources>
