stated to code the logic for search, still not ready, addes a draft of the layout for cart

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="item_price">some orange price in €</string>
     <string name="like_counter">rate number and star icon</string>
     <string name="reviews_counter">reviews number </string>
+    <string name="searchbarHint">Search Product Name</string>
 </resources>
