adde a toolbar, still not styled

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="like_counter">rate number and star icon</string>
     <string name="reviews_counter">reviews number </string>
     <string name="searchbarHint">Search Product Name</string>
+    <string name="homeMenuBottNavBar">Home</string>
+    <string name="searchMenuBottNavBar">Search</string>
+    <string name="cartMenuBottNavBar">Cart</string>
 </resources>
